--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@upstash/redis": "^1.35.3",
     "antd": "^5.27.3",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.2",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.5",
     "inngest": "^3.40.2",
