--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.57.0",
     "@types/pg": "^8.15.5",
+    "@types/uuid": "^10.0.0",
     "@upstash/redis": "^1.35.3",
     "antd": "^5.27.3",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.5",
@@ -36,8 +38,10 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-redux": "^9.2.0",
+    "recharts": "^3.2.1",
     "redux-persist": "^6.0.0",
     "tailwind-merge": "^3.3.1",
+    "uuid": "^13.0.0",
     "zod": "^4.1.5"
   },
   "devDependencies": {
